; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/8021q/extr_vlan.c___find_vlan_dev.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/8021q/extr_vlan.c___find_vlan_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.vlan_group = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.net_device* @__find_vlan_dev(%struct.net_device* %0, i32 %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.vlan_group*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.net_device*, %struct.net_device** %4, align 8
  %8 = call %struct.vlan_group* @__vlan_find_group(%struct.net_device* %7)
  store %struct.vlan_group* %8, %struct.vlan_group** %6, align 8
  %9 = load %struct.vlan_group*, %struct.vlan_group** %6, align 8
  %10 = icmp ne %struct.vlan_group* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.vlan_group*, %struct.vlan_group** %6, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call %struct.net_device* @vlan_group_get_device(%struct.vlan_group* %12, i32 %13)
  store %struct.net_device* %14, %struct.net_device** %3, align 8
  br label %16

15:                                               ; preds = %2
  store %struct.net_device* null, %struct.net_device** %3, align 8
  br label %16

16:                                               ; preds = %15, %11
  %17 = load %struct.net_device*, %struct.net_device** %3, align 8
  ret %struct.net_device* %17
}

declare dso_local %struct.vlan_group* @__vlan_find_group(%struct.net_device*) #1

declare dso_local %struct.net_device* @vlan_group_get_device(%struct.vlan_group*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
